<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="wrap_content"    android:layout_height="wrap_content"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_margin="16dp"    android:background="#00000000"    android:gravity="center_horizontal"    android:orientation="vertical"    android:padding="20dp">    <TextView        android:layout_gravity="start"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginBottom="16dp"        android:drawableLeft="@drawable/ic_notifications_black_24dp"        android:drawablePadding="8dp"        android:text="@string/head_info_notification"        android:textSize="16sp"        android:textStyle="bold" />    <TextView        android:id="@+id/notification_message"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginBottom="20dp"        android:text="@string/info_notification"        android:textSize="16sp" />    <Button        android:id="@+id/ok_button"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_gravity="bottom|end"        android:text="@string/ok"        android:textColor="#FFFFFF" /></LinearLayout>